--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+####dist
 
 # React dependencies
 /.pnp
@@ -125,5 +125,3 @@ wasm-pack.log
 
 # Others
 .DS_Store
-
-/dist
