--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-widget-airport",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "private": false,
   "description": "A React widget for Airport animations with flight departures/arrivials.",
   "main": "dist/airport.app.js",
   "scripts": {
     "pretty": "$npm_execpath prettier -w \"**/*.(js|jsx)\"",
-    "build:dev": "$npm_execpath webpack --config webpack.dev.js",
+    "start": "$npm_execpath webpack serve --config webpack.dev.js",
     "build": "$npm_execpath webpack --config webpack.prod.js",
     "serve": "http-server dist -a localhost -p 8080"
   },
@@ -62,6 +62,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "4.0.0-beta.0",
     "webpack-merge": "^5.4.0"
   }
 }
