--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "react-widget-airport",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": false,
   "description": "A React widget for Airport animations with flight departures/arrivials.",
   "main": "dist/airport.app.js",
   "scripts": {
     "prettier": "prettier -w \"*.*\" \"**/*.(js|jsx)\"",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build": "webpack --optimization-minimize",
     "serve": "http-server dist -a localhost -p 8080",
-    "start": "$npm_execpath run build && $npm_execpath run serve"
+    "start": "$npm_execpath run build:dev && $npm_execpath run serve"
   },
   "repository": "https://github.com/minagawah/react-widget-airport.git",
   "keywords": [
@@ -40,6 +41,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.5",
     "pixi.js": "^6.0.1",
     "pixi.js-legacy": "^6.0.1",
     "ramda": "^0.27.1",
@@ -51,8 +53,10 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
     "@babel/runtime-corejs3": "^7.13.10",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.1.5",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "3",
     "css-loader": "^5.2.0",
