--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "PIXI",
     "react-pixi-fiber"
   ],
-  "author": "Hiroki Minagawa <minagawa@tokyo800.jp>",
+  "author": "minagawah <minag@tokyo800.jp>",
   "license": "(Unlicense OR MIT)",
   "bugs": {
     "url": "https://github.com/minagawah/react-widget-airport/issues"
